--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
         "strict": true,
         "target": "es5",
         "removeComments": true,
+        "noUnusedLocals": true,
         "noUnusedParameters": true,
+        "strictPropertyInitialization": false,
         "sourceMap": true,
         "outFile": "docs/js/main.js"
     },
